--- a/lab3/MainWindow.xaml
+++ b/lab3/MainWindow.xaml
@@ -15,9 +15,9 @@
             </MenuItem>
         </Menu>
         <ListBox x:Name="lb" HorizontalAlignment="Left" Height="134" VerticalAlignment="Top" Width="292" Margin="10,145,0,0"/>
-        <Button x:Name="del" Content="Удалить" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="227,26,0,0" Click="del_Click"/>
-        <Button x:Name="red" Content="Редактировать" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="205,105,0,0" Click="del_Click"/>
-        <Grid HorizontalAlignment="Left" Height="109" VerticalAlignment="Top" Width="132" Margin="90,26,0,0">
+        <Button x:Name="del" Content="Удалить" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="10,51,0,0" Click="del_Click"/>
+        <Button x:Name="red" Content="Редактировать" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="10,76,0,0" Click="red_Click"/>
+        <Grid HorizontalAlignment="Left" Height="109" VerticalAlignment="Top" Width="132" Margin="150,26,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
